[package]
name = "textnonce"
version = "0.6.5"
description = "Text based random nonce generator"
authors = [ "Mike Dilger <mike@optcomp.nz>" ]
readme = "README.md"
repository = "https://github.com/mikedilger/textnonce"
documentation = "https://docs.rs/textnonce"
license = "MIT OR Apache-2.0"
keywords = [ "nonce", "random" ]

[dev-dependencies]
bincode = "1.1"

[dependencies]
rand = "0.6"
chrono = "0.4"
byteorder = "1.3"
base64 = "0.10"
serde = "1.0"
serde_derive = "1.0"
