[package]
name = "textnonce"
version = "0.8.0-pre"
description = "Text based random nonce generator"
authors = [ "Mike Dilger <mike@optcomp.nz>" ]
readme = "README.md"
repository = "https://github.com/mikedilger/textnonce"
documentation = "https://docs.rs/textnonce"
license = "MIT OR Apache-2.0"
keywords = [ "nonce", "random" ]
edition = "2018"

[dev-dependencies]
bincode = "1.2"

[dependencies]
rand = "0.7"
chrono = "0.4"
byteorder = "1.3"
base64 = "0.11"
serde = { version = "1.0", features = [ "derive" ] }
