[package]
name = "textnonce"
version = "1.0.0"
description = "Text based random nonce generator"
authors = [ "Mike Dilger <mike@optcomp.nz>" ]
readme = "README.md"
repository = "https://github.com/mikedilger/textnonce"
documentation = "https://docs.rs/textnonce"
license = "MIT OR Apache-2.0"
keywords = [ "nonce", "random" ]
edition = "2018"

[dependencies]
rand = "0.7"
base64 = "0.12"
serde = { version = "1.0", features = [ "derive" ], optional = true }

[dev-dependencies]
bincode = "1.2"
